[tool.poetry]
name = "pythoneda-realm-unveilingpartner"
version = "0.0.1a4"
description = "UnveilingPartner's PythonEDA realm"
authors = ["rydnr <github@acm-sl.org>"]
readme = "README.md"
homepage = "https://github.com/pythoneda-realm/unveilingpartner"
packages = [{include = "pythonedarealmunveilingpartner"}]

[tool.poetry.dependencies]
python = "^3.8"
pythoneda-artifact-event-changes = "^0.0.1a1"
pythoneda-artifact-event-git-tagging = "^0.0.1a1"
pythoneda-artifact-shared-changes = "^0.0.1a1"
pythoneda-base = "^0.0.1a18"
pythoneda-shared-git = "^0.0.1a4"
unidiff = "^0.7.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
